@@ -1,3 +1,8 @@
+2013-12-15 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCicode.c (newiTempOperand): fixed bug 2235
+	* support/regression/tests/bug-2235.c: new, added
+
 2013-12-07 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* .version, doc/sdccman.lyx: bumped version to 3.3.2
